# ChangeLog for squashmount

*squashmount-22.0.1:
	Martin Väth <martin at mvath.de>:
	- Add SPDX-License-Identifier

*squashmount-22.0:
	Martin Väth <martin at mvath.de>:
	- Introduce functions to handle rust libraries conveniently:
	- Let standard_mount accept a reference to a dir array
	- Introduce envlibs to return installed libraries as a dir array

*squashmount-21.0.1:
	Martin Väth <martin at mvath.de>:
	- Clarify license

*squashmount-21.0:
	Martin Väth <martin at mvath.de>:
	- Support https://github.com/containers/fuse-overlayfs

*squashmount-20.0:
	Martin Väth <martin at mvath.de>:
	- Support https://github.com/AgentD/squashfs-tools-ng (--tar2sqfs)
	  BEWARE: For me, this new tool does not work for unknown reasons:
	  tar2sqfs produces files unreadable by the kernel or by unsquashfs
	  (no matter whether squashfs-root is a parent directory), and
	  sqfs2tar segfaults on files generated by mksquashfs.
	  However, I added (untested) support for users without such problems.

*squashmount-19.1:
	Martin Väth <martin at mvath.de>:
	- Introduce print-mtime
	- Output mtime of squashed file with squashmount -vv status

*squashmount-19.0.2:
	Martin Väth <martin at mvath.de>:
	- Avoid wrong linebreak in manpage

*squashmount-19.0.1:
	Martin Väth <martin at mvath.de>:
	- Fix quoting in manpage

*squashmount-19:
	Martin Väth <martin at mvath.de>:
	- Add -o index=off to MOUNT_OVERLAY default

*squashmount-18.2.1:
	Martin Väth <martin at mvath.de>:
	- Fix variable name which contains LAZY, LSOF, LSOF_RO
	  (in 18.2 they were simply ignored due to this bug).

*squashmount-18.2
	Martin Väth <martin at mvath.de>:
	- Change $lsof_ro default to 1 since sometimes (e.g. for
	  /usr/lib*/firefox) umounting can fail even if lsof shows that only
	  readonly directory is accessed. On the other hand, for
	  /usr/share/texmf-dist the opposite is the case. Therefore:
	- Provide LAZY, LSOF, LSOF_RO to override $lazy, $lsof, $lsof_ro